monitoring-stack/alertmanager/alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: alertmanager-wheel-tls
  labels:
    alertmanager: main
  name: alertmanager-wheel
spec:
  ports:
  - name: web
    port: 9094
    targetPort: web
  - name: tenancy
    port: 9092
    targetPort: tenancy
  selector:
    alertmanager: main
    app: alertmanager
