monitoring-stack/alertmanager/alertmanager-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wheel-alertmanager
spec:
  host: wheel-alertmanager-monitoring-stack.apps.okd.baloise.dev
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: wheel-alertmanager
    weight: 100
  wildcardPolicy: None
